l5e-es/mongodb-instance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: l5e-es
  namespace: l5e
spec:
  type: ClusterIP
  selector:
    app: l5e-es-svc # operator labels pods "app: <name>-svc"
  ports:
    - port: 27017
      targetPort: 27017
