l5e-es/mongodb-instance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es-ingress
  namespace: l5e
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: "es.jinora.lan"
    http:                  # for MongoDB, this actually needs TCP routing config in Traefik
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: l5e-es
            port:
              number: 27017
